--- a/cloud-provider/src/main/resources/application.properties
+++ b/cloud-provider/src/main/resources/application.properties
@@ -1,2 +1,5 @@
-spring.application.name=hello-service
+server.port=8093
+
+spring.application.name=cloud-provider-service
 eureka.client.service-url.defaultZone=http://localhost:1111/eureka
+
