完善微服务信息

--- a/cloud-provider/src/main/resources/application.properties
+++ b/cloud-provider/src/main/resources/application.properties
@@ -2,4 +2,10 @@ server.port=8093
 
 spring.application.name=cloud-provider-service
 eureka.client.service-url.defaultZone=http://localhost:1111/eureka
+eureka.instance.instance-id=p-127.0.0.1-8093
+eureka.instance.prefer-ip-address=true
 
+info.app.name=cloud-provider
+info.company.name=www.luckyqiang.cn
+info.build.artifactId=$project.artifactId$
+info.build.version=$project.version$
