--- a/cloud-consumer/src/main/resources/application.properties
+++ b/cloud-consumer/src/main/resources/application.properties
@@ -2,3 +2,10 @@ server.port=9065
 
 spring.application.name=cloud-consumer-service
 eureka.client.service-url.defaultZone=http://localhost:1111/eureka
+eureka.instance.instance-id=c-127.0.0.1-9065
+eureka.instance.prefer-ip-address=true
+
+info.app.name=cloud-provider
+info.company.name=www.luckyqiang.cn
+info.build.artifactId=$project.artifactId$
+info.build.version=$project.version$
